# smart-price

./: .diplom_dump.txt  .gitignore  .mcp.json  .pre-commit-config.yaml  AUDIT_LOG.md  CLAUDE.md  CODE_REVIEW.md  LICENSE  README.md  _above.txt  _ai_marker_report.txt  _alltbl.txt  _anns.txt  _anti.txt  _audit.txt  _borders.txt  _brokenrefs.txt  _build_auto_toc.py  _caption_audit.py  _caption_audit.txt  _cite_diploma.py  _cityyear.txt  _cmp.txt  _compare_titles.txt  _compliance.txt  _cont.txt  _crop_figures.py  _crop_report.txt  _dehumanize_pass.py  _demote_sub3.py  _depl.txt  _diploma_full.txt  _disputed.txt  _extract_pages.py  _final_audit.txt  _final_check.txt  _final_chk.txt  _final_figs.txt  _final_fixes.py  _final_fixes2.py  (+218 more)
.claude/agents/: architect.md  backend-dev.md  chat-tester.md  deploy-verifier.md  frontend-dev.md  regression-tester.md  scraper-tester.md
.claude/commands/: add-scraper.md  test-scraper.md  verify-all.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  README.md  _dev_bootstrap_db.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_cheaper_searches.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: base_agent.py  shopping_agent.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: analyze.py  auth.py  catalog.py  chat.py  cheaper.py  compare.py  health.py  image_proxy.py  onliner_product.py  parsers.py  payments.py  price_history.py  products.py  search.py  search_stream.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/data/: category_negatives.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  alert.py  category.py  chat.py  cheaper.py  marketplace.py  payment.py  price_history.py  product.py  product_match.py  scraping_job.py  user.py
backend/app/ml/: init1_ml.py  product_indexer.py  qdrant_service.py
backend/app/ml/embeddings/: encoder.py  init2_embeddings.py
backend/app/ml/matching/: init3_matching.py  matcher.py
backend/app/schemas/: __init__.py  analyze.py  cheaper.py  product.py  search.py
backend/app/scrapers/: __init__.py  ai_relevance_filter.py  antidetect.py  base.py  biggeek_http.py  browserless_scrapers.py  category_extractor.py  external_reviews.py  manager.py  oneclick_http.py  onliner.py  ozon.py  playwright_scrapers.py  query_corrector.py  regard_http.py  utils.py  wildberries.py  worlddevices_http.py  yandex_market.py
backend/app/services/: __init__ .py  analytics_service.py  cleanup.py  price_analyzer.py  product_service.py  search_service.py
backend/app/workers/: alisa.py  cheaper_runner.py  export_session.py
backend/scripts/: run_dev.py  seed_data.py
backend/tests/: conftest.py  test_browserless.py
backend/tests/test_api/: test_health.py  test_products.py
backend/tests/test_ml/: init4_test_ml.py  test_encoder.py  test_matcher.py
backend/tests/test_scrapers/: conftest.py  smoke_test.py  test_accessory_intent.py  test_base.py  test_utils.py  test_wildberries.py
backend/tests/test_services/: test_product_service.py
docker/: docker-compose.dev.yml  env.example
docker/clickhouse/: init.sql
docker/postgres/: init.sql
docs/: ARCHITECTURE.md  CHEAPER_FEATURE_ROADMAP.md  CURRENT_STRUCTURE.md  CURRENT_STRUCTURE_ML.md  CURRENT_STRUCTURE_UPDATED.md  DEPLOY.md  GOTCHAS.md  TASKS.md
frontend/: .env.example  .env.local  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/catalog/: layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/cheaper/: page.tsx
frontend/src/app/compare/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/payment/cancel/: page.tsx
frontend/src/app/payment/success/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/app/product/: loading.tsx  page.tsx
frontend/src/app/product/[id]/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: index.ts  smart-icons.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/product/: PriceChart.tsx  ProductCard.tsx  ProductGrid.tsx  index.ts
frontend/src/components/search/: FilterPanel.tsx  SearchBar.tsx  index.ts
frontend/src/hooks/: index.ts  useProducts.ts  useSearch.ts
frontend/src/lib/: api.ts  auth.ts  cheaper.ts  utils.ts
frontend/src/types/: api.ts  index.ts  product.ts
nginx/: nginx.conf
