[project]
name = "smart-price-backend"
version = "0.1.0"
description = "AI-powered price comparison and analytics service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Smart Price Team", email = "team@smartprice.com"}
]
keywords = ["price-comparison", "ai", "fastapi", "scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.1",

    # Validation & Settings
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # HTTP Client
    "httpx>=0.26.0",

    # Scraping
    "playwright>=1.41.0",
    "selectolax>=0.3.21",
    "tenacity>=8.2.3",

    # ML & AI
    "sentence-transformers>=2.2.2",
    "anthropic>=0.18.0",
    "qdrant-client>=1.7.0",

    # Task Queue
    "celery[redis]>=5.3.6",

    # Logging
    "structlog>=24.1.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.19.0",
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",

    # Linting & Formatting
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "types-python-dateutil>=2.8.19",

    # Pre-commit
    "pre-commit>=3.6.0",

    # Security
    "bandit[toml]>=1.7.7",
]

ml = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "clip-interrogator>=0.6.0",
]

[project.scripts]
smart-price = "app.main:main"

[project.urls]
Homepage = "https://github.com/your-org/smart-price"
Documentation = "https://docs.smartprice.com"
Repository = "https://github.com/your-org/smart-price"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ==================== Ruff Configuration ====================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "alembic/versions",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"alembic/*" = ["ERA"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==================== MyPy Configuration ====================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ==================== Pytest Configuration ====================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers -ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ==================== Coverage Configuration ====================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/alembic/*",
    "app/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true

# ==================== Bandit Security Configuration ====================
[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert used in tests
